@@ -5,7 +5,6 @@ import com.example.wuhou.constant.PermissionConstant;
 import com.example.wuhou.constant.ResponseConstant;
 import com.example.wuhou.entity.Log;
 import com.example.wuhou.service.FileCatalogingService;
-import com.example.wuhou.service.LogService;
 import com.example.wuhou.util.ResultUtil;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -18,6 +17,7 @@ import org.springframework.web.bind.annotation.*;
 import javax.servlet.http.HttpServletResponse;
 import java.io.*;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @RestController
@@ -34,25 +34,25 @@ public class FileCatalogingController {
             @ApiParam(value = "档号", required = true) @RequestParam() String documentNumber,
             HttpServletResponse response
     ){
+        String filename = "编目导出.docx";
+        String outputPath = PathConstant.WORD_OUTPUT;
         try {
             //生成文件
             fileCatalogingService.outputFileCatalog(documentNumber);
-            InputStream inputStream = new BufferedInputStream(new FileInputStream(PathConstant.FILE_CATALOG_OUTPUT_PATH));
+            InputStream inputStream = new BufferedInputStream(new FileInputStream(outputPath));
             byte[] buffer = new byte[inputStream.available()];
             inputStream.read(buffer);
             inputStream.close();
             response.reset();
-            String filename = "fileCatalogOutput编目导出.docx";
-            response.setHeader("Content-Disposition", "attachment;Filename=" + URLEncoder.encode(filename, "UTF-8"));
+            response.setHeader("Content-Disposition", "attachment;Filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
             OutputStream toClient = new BufferedOutputStream(response.getOutputStream());
             toClient.write(buffer);
             toClient.flush();
             toClient.close();
-
         }catch (Exception e){
-            return new ResultUtil<>(ResponseConstant.ResponseCode.FAILURE, e.getMessage());
+            return new ResultUtil<>(ResponseConstant.ResponseCode.FAILURE, "导出失败: " + e.getMessage());
         }
-        File file = new File(PathConstant.FILE_CATALOG_OUTPUT_PATH);
+        File file = new File(outputPath);
         file.delete();
         return new ResultUtil<>(ResponseConstant.ResponseCode.SUCCESS, "导出成功！");
     }
